[package]
name = "goose"
version = "0.16.4-dev"
authors = ["Jeremy Andrews <jeremy@tag1consulting.com>"]
edition = "2018"
description = "A load testing framework inspired by Locust."
homepage = "https://tag1.com/goose"
documentation = "https://book.goose.rs"
repository = "https://github.com/tag1consulting/goose"
readme = "README.md"
keywords = ["loadtesting", "performance", "web", "framework", "tool"]
license = "Apache-2.0"

[dependencies]
json-rpc-types = "1.1.0"
async-trait = "0.1"
chrono = "0.4"
ctrlc = "3.1"
downcast-rs = "1.2.0"
flume = "0.10"
futures = "0.3"
gumdrop = "0.8"
http = "0.2"
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
num_cpus = "1.0"
num-format = "0.4"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = [
    "cookies",
    "gzip",
    "json",
] }
serde = { version = "1.0", features = [
    "derive",
] }
serde_cbor = "0.11"
serde_json = "1.0"
simplelog = "0.10"
strum = "0.24"
strum_macros = "0.24"
tokio-util = { version = "0.7.3", features = ["codec"] }
tokio = { version = "1.20.1", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
    "sync",
] }
tokio-tungstenite = "0.15"
tungstenite = "0.15"
url = "2"
zkmatrix-pool-protocol = { git = "https://github.com/ABMatrix/zkmatrix-pool-protocol", branch = "0.2.0" }


# optional dependencies
nng = { version = "1.0", optional = true }

[features]
default = ["reqwest/default-tls"]
gaggle = ["nng"]
rustls-tls = ["reqwest/rustls-tls", "tokio-tungstenite/rustls-tls"]

[build-dependencies]
rustc_version = "0.4"

[dev-dependencies]
httpmock = "0.6"
native-tls = "0.2"
nix = "0.25.0"
rustls = "0.20.6"
serial_test = "0.9.0"
